# thegame

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: CI-Verify-Build-Tests.yml  ci-cd.yml
app/: CMakeLists.txt  main.cpp
config/: config.json
docs/: Doxyfile
docs/html/: index.html
src/: CMakeLists.txt  cooks.cpp  cooks.hpp  game.cpp  game.hpp  players.cpp  players.hpp
src/config/: CMakeLists.txt  config.cpp  config.hpp
src/cooks/: CMakeLists.txt  cooks.cpp  cooks.hpp
src/game/: CMakeLists.txt  game.cpp  game.hpp
src/players/: CMakeLists.txt  players.cpp  players.hpp
testing/: CMakeLists.txt  main.cpp  test_results.txt
utils/: CMakeLists.txt  utils.cpp  utils.hpp
